2005-08-09 Mario Sopena Novales <mario.sopena@gmail.com>
	* browser.cs: 
		- Allow render with CSS
		- Detect fonts for CSS rendering
2005-07-30 Mario Sopena Novales <mario.sopena@gmail.com>
	* Makefile.am: build gecko support in a separate dll: GeckoHtmlRender.dll
	* monodoc.in: Change "--gecko" parameter to "--no-gecko"
	* HtmlRender.cs: splitted in 3 files (deleted):
		* IHtmlRender.cs: interface
		* GtkHtmlHtmlRender.cs: GtkHtml based renderer
		* GeckoHtmlRender.cs: Gecko-sharp based renderer

2005-07-07 Mario Sopena Novales <mario.sopena@gmail.com>

	Move the rendering logic to an interface IHtmlRender and write 
	two implementatios of it, one uses gtkhtml and the other gecko.

	* configure.in: Add gecko-sharp dependency
	* docbrowser/monodoc.in: Add "--gecko" parameter
	* docbrowser/Makefile.am: Add HtmlRender to sources and gecko libs references for compiling
	* docbrowser/HtmlRender.cs: New file with the interface IHtmlRender and the two 
				implementations: GeckoHtmlRender, GtkHtmlHtmlRender
	* docbrowser/browser.cs: Use the new HtmlRender for rendering

2005-05-31  Raja R Harinath  <rharinath@novell.com>

	* monodoc.in: Emit warnings to stderr.  Fix fallbacks.
	(--updater): Since it has no fallback, exit with failure.
	(monodocdir): Set to match Makefile.am.

2005-05-25  Ben Maurer  <bmaurer@ximian.com>

	* monodoc.desktop.in: Desktop file
	* monodoc.in: execution script.

2005-05-21 Joshua Tauberer <tauberer@for.net>

	When loading EcmaUncompiledHelpSources, don't
	created the help source in browser.cs because it
	needs to be created and added to help_sources at the
	same time, because of the static id variable being
	incremented in the HelpSource constructor. The
	DLL is affected too.
	  
	* browser.cs: Send the paths to uncompiled
	  help, rather than the help sources.

2005-05-08  Ben Maurer  <bmaurer@ximian.com>

	* Makefile.am: use $(RUNTIME) rather than `mono'

2005-04-27 Mike Kestner <mkestner@novell.com>

	* Makefile.am : build admin.exe.