@@ -1,3 +1,8 @@
+2005-08-17 Mario Sopena Novales <mario.sopena@gmail.com>
+	* browser.cs: Added Menu Items for changing the font size when using 
+	gecko. Also added a Reload function.
+	* history.cs: Added a Count property
+
 2005-08-09 Mario Sopena Novales <mario.sopena@gmail.com>
 	* browser.cs: 
 		- Allow render with CSS
